tcg-salesforce/force-app/main/default/objects/RowConfiguration__mdt/RowConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Row Configuration</label>
    <pluralLabel>Rows Configurations</pluralLabel>
</CustomObject>