tcg-salesforce/force-app/main/default/objects/RowConfiguration__mdt/fields/NumberCards__c.field-meta.xml
<CustomField>
    <fullName>NumberCards__c</fullName>
    <label>Number of Cards</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>