tcg-salesforce/force-app/main/default/objects/RowConfiguration__mdt/fields/RowCategory__c.field-meta.xml
<CustomField>
    <fullName>RowCategory__c</fullName>
    <label>Row category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>