tcg-salesforce/force-app/main/default/objects/RowConfiguration__mdt/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <label>Row number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>